# so_gauss

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/alw/solibtest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: advanced_test.cpp  fast_test.cpp  native-lib.cpp
app/src/main/java/com/example/alw/myapplication/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/example/alw/solibtest/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
